--- a/index.html
+++ b/index.html
@@ -33,50 +33,120 @@
    </div>
 
    <div class="content">
-    <img src="image-computer.png" alt="">
-    <h1>
-        Quick Search
-    </h1>
-    <p>
-        Easily search your snippets by content,category,web address,appication,and more.
-    </p>
-    <h1>
-        iCloud Sync
-    </h1>
-    <p>
-        Instantly saves and syncs snippets across all your devices.
-    </p>
-    <h1>
-        Complete History
-    </h1>
-    <p>
-        Retrieves any snippets from the first moment you started using the app.
-    </p>
+        <img src="image-computer.png" alt="">
+        <h1>
+            Quick Search
+        </h1>
+        <p>
+            Easily search your snippets by content,category,web address,appication,and more.
+        </p>
+        <h1>
+            iCloud Sync
+        </h1>
+        <p>
+            Instantly saves and syncs snippets across all your devices.
+        </p>
+        <h1>
+            Complete History
+        </h1>
+        <p>
+            Retrieves any snippets from the first moment you started using the app.
+        </p>
    </div>
 
    <div class="content-1">
-    <h1>
-        Access Clipboard Anywhere
-    </h1>
-    <p>Whether you're on the go,or at your computer,you can access all your Clipboard snippets in a few simple clicks.</p>
-    <img src="image-devices.png" alt="">
-   </div>
+        <h1>
+            Access Clipboard Anywhere
+        </h1>
+        <p>Whether you're on the go,or at your computer,you can access all your Clipboard snippets in a few simple clicks.</p>
+        <img src="image-devices.png" alt="">
+    </div>
 
-   <div class="content-2">
-    <h1>
-        Supercharge your workflow
-    </h1>
-    <p>
-        We've got the tools to boost your productivity.
-    </p>
-    <img src="icon-blacklist.svg" alt="">
-    <h1>
-        Create blacklists
-    </h1>
-    <p>
-        Ensure sensitive information never makes its way to your clipboard by excluding certain resources.
-    </p>
-   </div>
+    <div class="content-2">
+        <h1>
+            Supercharge your workflow
+        </h1>
+        <p>
+            We've got the tools to boost your productivity.
+        </p>
+     <div class="icon-details">
+        <img src="icon-blacklist.svg" alt="">
+        <h1>
+            Create blacklists
+        </h1>
+        <p>
+            Ensure sensitive information never makes its way to your clipboard by excluding certain resources.
+        </p>
+     </div>
+
+        <div class="icon-details">
+            <img src="icon-text.svg" alt="">
+            <h1>
+                Plain text snippets
+            </h1>
+            <p>
+                Remove unwanted formatting from copied text for a consistent look.
+            </p>
+        </div>
+
+        <div class="icon-details">
+            <img src="icon-preview.svg" alt="">
+            <h1>
+                Sneak preview
+            </h1>
+            <p>
+                quick preview of all snippets on your Clipboard for easy access.
+            </p>
+        </div>
+
+    </div>
+
+    <section class="company-logos">
+        <img src="logo-google.png" alt="">
+        <img src="logo-ibm.png" alt="">
+        <img src="logo-microsoft.png" alt="">
+        <img src="logo-hp.png" alt="">
+        <img src="logo-vector-graphics.png" alt="">
+    </section>
+
+    <div class="clipboard">
+        <h1>
+            Clipboard for iOS and Mac OS
+        </h1>
+        <p>
+            Available for free on the App Store.
+            Download for Mac or iOS, sync with iCloud and you're ready to start adding to your clipboard.        
+        </p>
+        <a href="">
+            <p class="btn">Download for iOS</p>
+        </a>
+        &nbsp;
+        <a href="">
+            <p class="btn-1">
+                Download for mac
+            </p>
+        </a>
+    </div>
+   
+    <footer>
+        <img src="logo.svg" alt="">
+        <li>FAQs</li>
+        <li>Contact Us</li>
+        <li>Privacy Policy</li>
+        <li>Press Kit</li>
+        <li>Install Guide</li>
+        <div class="icon">
+            <a href="">
+                <img src="icon-facebook.svg" alt="">
+            </a>
+            <a href="">
+                <img src="icon-twitter.svg" alt="">
+            </a>
+            <a href="">
+                <img src="icon-instagram.svg" alt="">
+            </a>
+        </div>
+    </footer>
     
 </body>
 </html>
