--- a/index.html
+++ b/index.html
@@ -129,12 +129,14 @@
     </div>
    
     <footer>
-        <img src="logo.svg" alt="">
-        <li>FAQs</li>
-        <li>Contact Us</li>
-        <li>Privacy Policy</li>
-        <li>Press Kit</li>
-        <li>Install Guide</li>
+        <img src="logo.svg" alt="" class="footer-image">
+        <div class="link">
+            <li><a href="">FAQs</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Press Kit</a></li>
+            <li><a href="">Install Guide</a></li>
+        </div>
         <div class="icon">
             <a href="">
                 <img src="icon-facebook.svg" alt="">
