--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
    <header>
     <img src="logo.svg" alt="" class="header-logo">
-    <h1>A history of everything you copy</h1>
+   
    </header>
    <div class="main">
-    <p>Clipboard allows you to track and organize everything you copy.Instantly access your clipboard on all your devices.</p>
-    <a href="">
-        <p class="btn">Download for iOS</p>
-    </a>
-    &nbsp;
-    <a href="">
-        <p class="btn-1">
-            Download for mac
+    <h1>A history of everything you copy</h1>
+        <p>
+            Clipboard allows you to track and organize everything you copy.Instantly access your clipboard on all your devices.
         </p>
-    </a>
+        <div class="buttons-1">
+            <a href="" class="btn-2">Download for iOS</a>
+            
+            <a href="" class="btn-3">Download for Mac</a>
+        </div>
+    
    </div>
 
    <div class="sub-main">
@@ -34,24 +34,30 @@
 
    <div class="content">
         <img src="image-computer.png" alt="">
-        <h1>
-            Quick Search
-        </h1>
-        <p>
-            Easily search your snippets by content,category,web address,appication,and more.
-        </p>
-        <h1>
-            iCloud Sync
-        </h1>
-        <p>
-            Instantly saves and syncs snippets across all your devices.
-        </p>
-        <h1>
-            Complete History
-        </h1>
-        <p>
-            Retrieves any snippets from the first moment you started using the app.
-        </p>
+        <section class="item">
+            <h1>
+                Quick Search
+            </h1>
+            <p>
+                Easily search your snippets by content,category,web address,appication,and more.
+            </p>
+        </section>
+        <section class="item">
+            <h1>
+                iCloud Sync
+            </h1>
+            <p>
+                Instantly saves and syncs snippets across all your devices.
+            </p>
+        </section>
+        <section class="item">
+            <h1>
+                Complete History
+            </h1>
+            <p>
+                Retrieves any snippets from the first moment you started using the app.
+            </p>
+        </section>
    </div>
 
    <div class="content-1">
@@ -95,7 +101,7 @@
                 Sneak preview
             </h1>
             <p>
-                quick preview of all snippets on your Clipboard for easy access.
+                Quick preview of all snippets on your Clipboard for easy access.
             </p>
         </div>
 
@@ -117,15 +123,10 @@
             Available for free on the App Store.
             Download for Mac or iOS, sync with iCloud and you're ready to start adding to your clipboard.        
         </p>
-        <a href="">
-            <p class="btn">Download for iOS</p>
-        </a>
-        &nbsp;
-        <a href="">
-            <p class="btn-1">
-                Download for mac
-            </p>
-        </a>
+        <div class="buttons">
+            <a href="" class="btn">Download for iOS</a>
+            <a href="" class="btn-1">Download for Mac</a>
+        </div>
     </div>
    
     <footer>
