--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,9 +17,9 @@
             Clipboard allows you to track and organize everything you copy.Instantly access your clipboard on all your devices.
         </p>
         <div class="button">
-            <a href="" class="btn">Download for iOS</a>
+            <a href="#" class="btn">Download for iOS</a>
                 
-            <a href="" class="btn-1">Download for Mac</a>
+            <a href="#" class="btn-1">Download for Mac</a>
         </div>  
     </div>
 
@@ -124,28 +124,30 @@
             Download for Mac or iOS, sync with iCloud and you're ready to start adding to your clipboard.        
         </p>
         <div class="button">
-            <a href="" class="btn">Download for iOS</a>
-            <a href="" class="btn-1">Download for Mac</a>
+            <a href="#" class="btn">Download for iOS</a>
+            <a href="#" class="btn-1">Download for Mac</a>
         </div>
     </div>
    
     <footer>
         <img src="logo.svg" alt="" class="footer-image">
         <div class="link">
-            <li><a href="">FAQs</a></li>
-            <li><a href="">Contact Us</a></li>
-            <li><a href="">Privacy Policy</a></li>
-            <li><a href="">Press Kit</a></li>
-            <li><a href="">Install Guide</a></li>
+            <ul>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Press Kit</a></li>
+                <li><a href="#">Install Guide</a></li>
+            </ul>
         </div>
         <div class="icon">
-            <a href="">
+            <a href="#">
                 <img src="icon-facebook.svg" alt="">
             </a>
-            <a href="">
+            <a href="#">
                 <img src="icon-twitter.svg" alt="">
             </a>
-            <a href="">
+            <a href="#">
                 <img src="icon-instagram.svg" alt="">
             </a>
         </div>
