--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-     <img src="logo.svg" alt="" class="header-logo">
+     <img src="logo.svg" alt="logo" class="header-logo">
     </header>
     <div class="main">
         <h1>A history of everything you copy</h1>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="content">
-        <img src="image-computer.png" alt="">
+        <img src="image-computer.png" alt="computer">
         <section class="left">
             <section class="item">
                 <h1>
@@ -64,8 +64,10 @@
         <h1>
             Access Clipboard Anywhere
         </h1>
-        <p>Whether you're on the go,or at your computer,you can access all your Clipboard snippets in a few simple clicks.</p>
-        <img src="image-devices.png" alt="">
+        <p>
+            Whether you're on the go,or at your computer,you can access all your Clipboard snippets in a few simple clicks.
+        </p>
+        <img src="image-devices.png" alt="devices">
     </div>
 
     <div class="content-2">
@@ -76,7 +78,7 @@
             We've got the tools to boost your productivity.
         </p>
         <div class="icon-details">
-            <img src="icon-blacklist.svg" alt="">
+            <img src="icon-blacklist.svg" alt="blacklist">
             <h1>
                 Create blacklists
             </h1>
@@ -86,7 +88,7 @@
         </div>
  
         <div class="icon-details">
-            <img src="icon-text.svg" alt="">
+            <img src="icon-text.svg" alt="text">
             <h1>
                 Plain text snippets
             </h1>
@@ -96,7 +98,7 @@
         </div>
 
         <div class="icon-details">
-            <img src="icon-preview.svg" alt="">
+            <img src="icon-preview.svg" alt="preview">
             <h1>
                 Sneak preview
             </h1>
@@ -108,11 +110,11 @@
     </div>
 
     <section class="company-logos">
-        <img src="logo-google.png" alt="">
-        <img src="logo-ibm.png" alt="">
-        <img src="logo-microsoft.png" alt="">
-        <img src="logo-hp.png" alt="">
-        <img src="logo-vector-graphics.png" alt="">
+        <img src="logo-google.png" alt="google">
+        <img src="logo-ibm.png" alt="ibm">
+        <img src="logo-microsoft.png" alt="microsoft">
+        <img src="logo-hp.png" alt="hp">
+        <img src="logo-vector-graphics.png" alt="vwctor">
     </section>
 
     <div class="clipboard">
@@ -130,7 +132,7 @@
     </div>
    
     <footer>
-        <img src="logo.svg" alt="" class="footer-image">
+        <img src="logo.svg" alt="logo" class="footer-image">
         <div class="link">
             <ul>
                 <li><a href="#">FAQs</a></li>
@@ -142,13 +144,13 @@
         </div>
         <div class="icon">
             <a href="#">
-                <img src="icon-facebook.svg" alt="">
+                <img src="icon-facebook.svg" alt="facebook">
             </a>
             <a href="#">
-                <img src="icon-twitter.svg" alt="">
+                <img src="icon-twitter.svg" alt="twitter">
             </a>
             <a href="#">
-                <img src="icon-instagram.svg" alt="">
+                <img src="icon-instagram.svg" alt="insta">
             </a>
         </div>
     </footer>
